--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/d3-array": "^3.0.3",
     "@types/d3-polygon": "^3.0.0",
     "@types/jest": "^29.1.2",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/mapbox-gl": "^2.7.6",
     "@types/polylabel": "^1.0.5",
     "@types/proj4": "^2.5.2",
@@ -37,17 +38,23 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "jest": "^29.2.1",
-    "mapbox-gl": "^2.10.0",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/centroid": "^6.5.0",
+    "@turf/distance": "^6.5.0",
+    "@turf/transform-scale": "^6.5.0",
+    "@turf/transform-translate": "^6.5.0",
+    "@turf/union": "^6.5.0",
     "d3-array": "^2.12.1",
     "d3-polygon": "^2.0.0",
     "geojson": "^0.5.0",
+    "lodash.clonedeep": "^4.5.0",
+    "mapbox-gl": "^2.10.0",
     "polylabel": "^1.1.0",
     "proj4": "^2.8.0"
   }
