--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "acres-mapbox-utils",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --config ./jest.config.js",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint \"src/**/*.ts\" --ext .ts --fix"
+    "lint": "eslint \"src/**/*.ts\" --ext .ts --fix",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guyllkegen/acres-mapbox-utils.git"
+    "url": "https://github.com/guyllkegen/acres-mapbox-utils.git"
   },
   "keywords": [],
   "author": "",
@@ -40,7 +41,8 @@
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "semantic-release": "^19.0.5"
   },
   "dependencies": {
     "@turf/bbox": "^6.5.0",
