--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "url": "https://github.com/guyllkegen/acres-mapbox-utils/issues"
   },
   "homepage": "https://github.com/guyllkegen/acres-mapbox-utils#readme",
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "devDependencies": {
     "@turf/helpers": "^6.5.0",
     "@types/d3-array": "^3.0.3",
@@ -40,9 +45,9 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "semantic-release": "^19.0.5"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@turf/bbox": "^6.5.0",
