--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\" --ext .ts --fix",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepack": "npmignore --auto"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,16 @@
       "next"
     ]
   },
+  "publishConfig": {
+    "ignore": [
+      "!dist/",
+      "src/",
+      "test/"
+    ]
+  },
+  "files": [
+    "/dist"
+  ],
   "devDependencies": {
     "@turf/helpers": "^6.5.0",
     "@types/d3-array": "^3.0.3",
@@ -45,6 +56,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "jest": "^29.2.1",
+    "npmignore": "^0.3.0",
     "prettier": "^2.7.1",
     "semantic-release": "^19.0.5",
     "ts-jest": "^29.0.3",
