--- a/.npmignore
+++ b/.npmignore
@@ -3,6 +3,13 @@ node_modules
 /dist
 /coverage
 .npmignore
+.DS_Store
+
+__mock__
+geometry
+mapbox
+index.d.ts
+index.js
 
 # npmignore - content above this line is automatically generated and modifications may be omitted
 # see npmjs.com/npmignore for more details.
