--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acres-mapbox-utils",
   "version": "0.0.0-development",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest --config ./jest.config.js",
     "build-prod": "tsc -p tsconfig.prod.json && node compressCode.js",
