--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/guyllkegen/acres-mapbox-utils/issues"
   },
