--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -4,14 +4,13 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "./dist",
-        "strict": true
+        "strict": true,
+        "esModuleInterop": true
     },
     "include": [
         "src"
     ],
     "exclude": [
-        "node_modules",
-        "**/*.test.ts",
-        "**/*.mock.ts"
+        "node_modules"
     ]
 }
