--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -11,6 +11,8 @@
         "src"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "**/*.test.ts",
+        "**/*.mock.ts"
     ]
 }
